
INSTALLER:
	Fixed: Allowed character range is not checked for SQL passwords (courier, dovecot, proftpd, phpmyadmin)
	Fixed: All printable characters from the ASCII table, excepted the space, must be allowed in SQL passwords
	Fixed: Length of SQL user names is not checked (courier, dovecot, profptd, phpmyadmin)
	Fixed: Unable to set DATABASE_USER_HOST (setup dialog is never displayed)

Tickets:
	Fixed: #0549: Bug - Apache - IPv6 addresses must be enclosed in square brackets
	Fixed: #1091: Defect - OpenVZ - simfs (proxy-filesystem) - Immutable flags - No support detection
	Fixed: #1092: Defect - Dovecot - SQL - The value of the connect parameter must be within double-quote

------------------------------------------------------------------------------------------------------------------------
1.1.9
------------------------------------------------------------------------------------------------------------------------

2014-05-25: Laurent Declercq
	- RELEASE i-MSCP 1.1.9

DATABASE:
	- Fixed: r187 is not a valid database update method

ENGINE:
	- Fixed: Can't locate object method "validateCertificateChain"

GUI:
	- Fixed: Unable to add self-signed certificate without CA bundle

------------------------------------------------------------------------------------------------------------------------
1.1.8
------------------------------------------------------------------------------------------------------------------------

2014-05-24: Laurent Declercq
	- RELEASE i-MSCP 1.1.8

CONFIGS:
	- Fixed: Wrong placeholder variables in proftpd configuration template file (Ubuntu)

GUI:
	- Fixed: Unable to add SSL certificate without CA bundle (unexpected line feed in ca_bundle field)

------------------------------------------------------------------------------------------------------------------------
1.1.7
------------------------------------------------------------------------------------------------------------------------

2014-05-23: Laurent Declercq